crates/sui-prover/tests/snapshots/quantifiers/filter_suffix_loop.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 297
expression: output
---
Verification successful
