crates/sui-prover/tests/snapshots/quantifiers/find_index_loop.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 277
expression: output
---
Verification successful


== Generated Boogie Code ==
function {:inline} $42_find_index_loop_ok_is_odd$pure(_$t0: int) returns ($ret0: bool)
{
    (var $t1 := 2;
    (var $t2 := (_$t0 mod $t1);
    (var $t3 := 1;
    (var $t4 := ($t2 == $t3);
    $t4))))
}
